<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>v2x_apps</name>
  <version>1.0.0</version>
  <description>Sample V2X Application</description>
  <author email="apostolos.georgiadis@nfiniity.com">Apostolos Georgiadis</author>
  <depend>rclpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
